Make `gn refs` handle files in data directories properly.

If a target specified `data = [ "test/" ]` and you ran
`gn refs out/Default //foo //foo/test/bar.cc`, gn refs would
incorrectly think that nothing referenced bar.cc. This patch
fixes that.

R=brettw@chromium.org
BUG=628783

Review-Url: https://codereview.chromium.org/2160383002
Cr-Commit-Position: refs/heads/master@{#406689}